Created a new folder called Resources, Created a navbar in html, fixing some details in CSS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Apple Page</title>
 </head>
 <body>
-    <h1>Hello World!!!</h1>
+    <header>
+        <div class="img-div">
+            <img class="img-crop" src="resources/hero.jpg" alt="">
+            <nav>
+                <div class="main-nav">
+                    <span class="apple-logo"><a href="_blank">hi!</a></span>  
+                    <span class="store"><a href="_blank">Store</a></span>
+                    <span class="mac"><a href="_blank">Mac</a></span>
+                    <span class="ipod"><a href="_blank">iPod</a></span>
+                    <span class="iphone"><a href="_blank">iPhone</a></span>
+                    <span class="ipad"><a href="_blank">iPad</a></span>
+                    <span class="itunes"><a href="_blank">iTunes</a></span>
+                    <span class="support"><a href="_blank">Support</a></span>
+                    <input type="text">
+                </div>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
