added a new row of images related on apple products

--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
             </nav>
         </div>
     </header>
+    <div class="imgs-container">
+        <a href="#"><img class="img-grid" src="resources/5s.jpg" alt="5s"></a>
+        <a href="#"><img class="img-grid" src="resources/5c.jpg" alt="5c"></a>
+        <a href="#"><img class="img-grid" src="resources/30years.jpg" alt="30 Years"></a>
+        <a href="#"><img class="img-grid" src="resources/supplier.jpg" alt=""></a>
+    </div>
 </body>
 </html>
