started to work with footer and the anchors inside, aligning items

--- a/index.html
+++ b/index.html
@@ -31,5 +31,21 @@
         <a href="#"><img class="img-grid" src="resources/30years.jpg" alt="30 Years"></a>
         <a href="#"><img class="img-grid" src="resources/supplier.jpg" alt=""></a>
     </div>
+    <footer>
+        <div class="footer">
+            <div class="footer-cont">
+                <p>Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>.</p>
+                <ul>
+                    <li><a href="#">Site Map</a></li>
+                    <li>|<a href="#"> RSS Feeds</a></li>
+                    <li>|<a href="#"> Hot News</a></li>
+                    <li>|<a href="#"> Media Info</a></li>
+                    <li>|<a href="#"> Environment</a></li>
+                    <li>|<a href="#"> Job Opportunities</a></li>
+                    <li>|<a href="#"> Contact Us </a>|</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
