--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                     <li>|<a href="#"> Job Opportunities</a></li>
                     <li>|<a href="#"> Contact Us </a>|</li>
                 </ul>
+                <div>
+                    <p>Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#"> Privacy Policy</a></p>
+                </div>
             </div>
         </div>
     </footer>
