added the style to the navbar, focus effect on search bar, text and anchor aligned in the footer, added the main text, pending to stylish the main text

--- a/index.html
+++ b/index.html
@@ -7,24 +7,27 @@
     <title>Apple Page</title>
 </head>
 <body>
-    <header>
-        <div class="img-div">
-            <img class="img-crop" src="resources/hero.jpg" alt="">
+        <div class="main-div">
             <nav>
-                <div class="main-nav">
-                    <span class="apple-logo"><a href="_blank">hi!</a></span>  
-                    <span class="store"><a href="_blank">Store</a></span>
-                    <span class="mac"><a href="_blank">Mac</a></span>
-                    <span class="ipod"><a href="_blank">iPod</a></span>
-                    <span class="iphone"><a href="_blank">iPhone</a></span>
-                    <span class="ipad"><a href="_blank">iPad</a></span>
-                    <span class="itunes"><a href="_blank">iTunes</a></span>
-                    <span class="support"><a href="_blank">Support</a></span>
-                    <input type="text">
+                <a href="#"><img class="apple-logo" src="resources/apple-logo.png" alt="Apple Logo"></a>
+                <a href="#">Store</a>
+                <a href="#">Mac</a>
+                <a href="#">iPod</a>
+                <a href="#">iPhone</a>
+                <a href="#">iPad</a>
+                <a href="#">iTunes</a>
+                <a href="#">Support</a>
+                <div class="searching">
+                    <input class="search" type="text" name="search">
                 </div>
             </nav>
+            <div>
+                <h2 class="title">What will your verse be?</h2>
+                <h3>Everyone has something to share. See how people are using</h3>
+                <h3>iPad in their unique way to add to the world's story.</h3>
+                <a href=""><h4>Watch the "Your Verse" film and explore the stories <img src="assets/images/media.png" alt="media icon"></h4></a>
+            </div>  
         </div>
-    </header>
     <div class="imgs-container">
         <a href="#"><img class="img-grid" src="resources/5s.jpg" alt="5s"></a>
         <a href="#"><img class="img-grid" src="resources/5c.jpg" alt="5c"></a>
@@ -44,7 +47,7 @@
                     <li>|<a href="#"> Job Opportunities</a></li>
                     <li>|<a href="#"> Contact Us </a>|</li>
                 </ul>
-                <div>
+                <div class="foo-pp">
                     <p>Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#"> Privacy Policy</a></p>
                 </div>
             </div>
