--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h2 class="title">What will your verse be?</h2>
                 <h3 class="txt-h3">Everyone has something to share. See how people are using <br>
                                    iPad in their unique way to add to the world's story.</h3>
-                <a class="play-icon" href="https://web.archive.org/web/20140301004610/http://www.apple.com/your-verse/#video-your-verse"><h4>Watch the "Your Verse" film and explore the stories <img src="/resources/play-video.png" alt="Play Video"></h4></a>
+                <a class="play-icon" href="https://web.archive.org/web/20140301004610/http://www.apple.com/your-verse/#video-your-verse"><h4>Watch the "Your Verse" film and explore the stories <img src="resources/play-video.png" alt="Play Video"></h4></a>
             </div>  
         </div>
     <div class="imgs-container">
